@@ -7,7 +7,7 @@
 //
 // **********************************************************************
 
-// Generated by makeprops.py from file `../config/PropertyNames.def', Thu Jun 14 10:01:00 2007
+// Generated by makeprops.py from file `../config/PropertyNames.def', Wed Jul 11 10:45:28 2007
 
 // IMPORTANT: Do not edit this file -- any edits made here will be lost!
 
