@@ -7,7 +7,7 @@
 //
 // **********************************************************************
 
-// Generated by makeprops.py from file `../config/PropertyNames.def', Thu Jun 14 10:01:00 2007
+// Generated by makeprops.py from file `../config/PropertyNames.def', Wed Jul 11 10:45:28 2007
 
 // IMPORTANT: Do not edit this file -- any edits made here will be lost!
 
@@ -189,6 +189,7 @@ namespace IceInternal
             @"^IceGrid\.Registry\.AdminPermissionsVerifier\.Router$",
             @"^IceGrid\.Registry\.AdminPermissionsVerifier\.CollocationOptimization$",
             @"^IceGrid\.Registry\.AdminPermissionsVerifier\.ThreadPerConnection$",
+            @"^IceGrid\.Registry\.AdminSessionFilters$",
             @"^IceGrid\.Registry\.AdminSSLPermissionsVerifier$",
             @"^IceGrid\.Registry\.AdminSSLPermissionsVerifier\.EndpointSelection$",
             @"^IceGrid\.Registry\.AdminSSLPermissionsVerifier\.ConnectionCached$",
@@ -253,6 +254,7 @@ namespace IceInternal
             @"^IceGrid\.Registry\.Server\.ThreadPool\.SizeMax$",
             @"^IceGrid\.Registry\.Server\.ThreadPool\.SizeWarn$",
             @"^IceGrid\.Registry\.Server\.ThreadPool\.StackSize$",
+            @"^IceGrid\.Registry\.SessionFilters$",
             @"^IceGrid\.Registry\.SessionManager\.AdapterId$",
             @"^IceGrid\.Registry\.SessionManager\.Endpoints$",
             @"^IceGrid\.Registry\.SessionManager\.Locator$",
